# virtulingo-backend

./: .env.example  ARCHITECTURE.md  LICENSE  README.md  SWITCH_TO_OLLAMA.md  inspect_redis.py  list_gemini_models.py  main.py  pyproject.toml  requirements.txt  test_api_endpoints.py  test_simple_ws.py  test_voice_chat.py  test_workflow.py
_bootstrap/: bootstrap.py
api/: api.py  dependency.py
api/routers/: conversations.py  events.py  review.py
api/routes/: api.py
application/: ConversationManager.py  DialogueOrchestrator.py  GrammarManager.py  ReviewScheduler.py  WorldStateManager.py
domain/: models.py
domain/interfaces/: ILargeLanguageModel.py  IPlayerProfile.py  IRepositories.py  IServices.py  ISpeechToText.py  ITextToSpeech.py
infrastructure/: bootstrap.py
infrastructures/: AzureSTT.py  AzureTTS.py  DeepgramSTT.py  ElevenLabsTTS.py  GeminiLLM.py  GoogleCloudTTS.py  GroqLLM.py  LLM.py  MockRedis.py  SpeechToText.py  TextToSpeech.py  db.py  events.py  redis.py
infrastructures/repos/: MistakeRepo.py  NPCRepo.py  PlayerProfileRepo.py  WorldStateRepo.py
migrations/: 001_initial_schema.sql
